precompiles/utils/macro/tests/precompile/handle/set-wrong-type.stderr
error: This parameter must have type `&mut impl PrecompileHandle`
  --> tests/precompile/handle/set-wrong-type.rs:22:38
   |
22 |     fn foo(_discriminant: u32, _handle: u32) {
   |                                         ^^^
